--- a/app/templates/instructions.tmpl.html
+++ b/app/templates/instructions.tmpl.html
@@ -1,15 +1,24 @@
-<div id="pageInsturctions">
-	<div data-bind="click:showClientInfo">back</div>
-	<section>
-		<h1>Do's</h1>
-		<ul>
-			<li>Do as instructed</li>
-		</ul>
-	</section>
-	<section>
-		<h1>Don't</h1>
-		<ul>
-			<li>Dont do anything that is not instructed</li>
-		</ul>
-	</section>
+<div id="pageInsturctions" data-enhance="false"> 
+	<header>
+		<div data-bind="click:showClientInfo" class="back">back</div>
+		<h1>Information</h1>
+	</header>
+	<section class="content">
+		<section>
+			<h1>Do's</h1>
+			<ul>
+				<li>Do as instructed</li>
+			</ul>
+		</section>
+		<section>
+			<h1>Don't</h1>
+			<ul>
+				<li>Dont do anything that is not instructed</li>
+			</ul>
+		</section>
+	</section>		
+	<footer>
+		&copyright; 2015
+	</footer>
+
 </div>
